--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.372.0",
     "markdown-to-jsx": "^7.3.2",
     "moment": "^2.29.4",
     "next": "^14.0.3",
