--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@next/mdx": "^14.0.3",
     "@types/jquery": "^3.5.29",
-    "@types/node": "^20.10.0",
-    "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
@@ -26,7 +24,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.69.5",
-    "typescript": "^5.3.2",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "typescript": "5.4.5"
   }
 }
