--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/mdx": "^14.0.3",
     "@types/jquery": "^3.5.29",
     "@types/react-dom": "18.2.17",
+    "bignumber.js": "^9.1.2",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "firebase": "^10.6.0",
@@ -28,7 +29,6 @@
   },
   "devDependencies": {
     "@types/node": "20.12.7",
-    "@types/react": "18.2.79",
-    "typescript": "5.4.5"
+    "@types/react": "18.2.79"
   }
 }
